<resources>
    <string name="app_name">Cafe Tea Time</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the
    application to stop. Please help us fix this by sending us error data,
    all you have to do is click OK.</string>
    <string name="crash_dialog_title">App has crashed</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string-array name="year_array">
        <item>First Year BTech</item>
        <item>Second Year BTech</item>
        <item>Third Year</item>
        <item>Fourth Year</item>
        <item>First Year MTech</item>
        <item>Second Year MTech</item>
    </string-array>
    <string-array name="branch_array">
        <item>Computer</item>
        <item>Mechanical</item>
        <item>IT</item>
        <item>ENTC</item>
        <item>Electrical</item>
        <item>Civil</item>
        <item>Production</item>
        <item>Instrumentation</item>
        <item>Metallurgy</item>
        <item>Planning</item>
    </string-array>
    <string-array name="block_array">
        <item>H</item>
        <item>I</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>C</item>
        <item>D</item>
        <item>J</item>
        <item>GHB</item>
        <item>A</item>
        <item>B</item>
    </string-array>
    <string name="paytm_channel_id">WAP</string>
    <string name="paytm_industry_type_id">Retail</string>
    <string name="paytm_website">cafewap</string>
    <string name="paytm_theme">merchant</string>
    <string name="paytm_merchant_id">CafeTe37672134657957</string>
    <string name="banner_ad_unit_id">ca-app-pub-5829738905898619/4083298689</string>
    <string name="about_us">
        Cafe Tea Time App is a platform for customers to see the available menu at any point of time. This will also help customers in quick decision making to finalize the menu. Placing order through app before they reach would help in saving waiting time and queue. Order delivery and cashless payments would be made easy through wallet payments and payment gateway.
    </string>
    <string name="terms_and_condition">
Welcome to Cafe Tea Time. If you continue to browse and use this app you are agreeing to comply with and be bound by the following terms and conditions of use, which together with our privacy policy govern Cafe Tea Time\'s relationship with you in relation to this app.

\nThe term \'Cafe Tea Time\' or \'us\' or \'we\' refers to the owner of the App. The term \'Users\' or \'Customers\' or \'Students\' or \'Your\' refers to the user or viewer of our app.

\nTHE USE OF THIS APP IS SUBJECT TO THE FOLLOWING TERMS OF USE:

\nThe content of the pages of this App is for your general information and use only. It is subject to change without notice.
\nNeither we nor any third parties provide any warranty or guarantee as to the accuracy, timeliness, performance, completeness or suitability of the information and materials found or offered on this app for any particular purpose. You acknowledge that such information and materials may contain inaccuracies or errors and we expressly exclude liability for any such inaccuracies or errors to the fullest extent permitted by law.
\nYour use of any information or materials on this app is entirely at your own risk, for which we shall not be liable. It shall be your own responsibility to ensure that any products, services or information available through this app meet your specific requirements.
\nThis app contains material which is owned by or licensed to us. This material includes, but is not limited to, the design, layout, look, appearance and graphics. Reproduction is prohibited other than in accordance with the copyright notice, which forms part of these terms and conditions.
\nAll trademarks reproduced in this app which are not the property of, or licensed to, the operator are acknowledged on the app.
\nUnauthorized use of this app may give rise to a claim for damages and/or be a criminal offence.
\nFrom time to time this app may also include links to other websites/apps. These links are provided for your convenience to provide further information. They do not signify that we endorse the website(s)/app(s). We have no responsibility for the content of the linked website(s)/app(s).
\nYou may not create a link to this app from another app or document without Cafe Tea Time\'s prior written consent.
\nYour use of this app and any dispute arising out of such use of the app is subject to the laws of India or other regulatory authority.
\n"We as a merchant shall be under no liability whatsoever in respect of any loss or damage arising directly or indirectly out of the decline of authorization for any Transaction, on Account of the Cardholder having exceeded the preset limit mutually agreed by us with our acquiring bank from time to time"

\n\nCONDITIONS RELATING TO THE SALE OF PRODUCTS TO YOU

\nThis section deals with conditions relating to the sale of products on the app by us to you.

\nOur Contract
\nYour order is an offer to us to buy the product(s) in your order. When you place an order to purchase a product from us, you will receive an order confirmation of your order with order id and containing the details of your order. The Order Confirmation with order id is acknowledgement that we have received your order, and does not confirm acceptance of your offer to buy the product(s) ordered. We only accept your offer, and conclude the contract of sale for a product ordered by you.

\nYour contract is with us (the Sellers) and you confirm that the product(s) ordered by you are purchased for your internal / personal purpose and not for re-sale. You authorize us to declare and provide declaration to any governmental authority on your behalf stating the aforesaid purpose of the products ordered by you on the app.

\nYou can not cancel or modify your order for a product. ‘Order id created’ would mean that your order has been placed with us, hence cannot be cancelled/modified.

\nPlease note that we sell products only in quantities which correspond to the typical needs of a customer. This applies both to the number of products ordered within a single order and the placing of several orders for the same product where the individual orders comprise a quantity typical for a normal person.
\n
\nPricing and availability
\nWe list availability information for products sold by us on the app, including on each product information page. Beyond what we say on that page or otherwise on the app, we cannot be more specific about availability. Please note that dispatch estimates are just that. They are not guaranteed dispatch times and should not be relied upon as such. As we process your order, you will be informed if any products you order turn out to be unavailable.
\n
\nTaxes
\nYou shall be responsible for payment of all fees/costs/charges associated with the purchase of products from us and you agree to bear any and all applicable taxes/VAT, cesses etc. levied thereon.
\n
\nAlteration or Amendments to the Conditions
\nWe reserve the right to make changes to our policies, and these Conditions of Sale at any time. You will be subject to the policies and Conditions of Sale in force at the time you order goods from us, unless any change to those policies or these conditions is required to be made by law or government authority (in which case it will apply to orders previously placed by you). If any of these conditions is deemed invalid, void, or for any reason unenforceable, that condition will be deemed severable and will not affect the validity and enforceability of any remaining condition.
\n
\nEvents beyond our reasonable control
\nWe will not be held responsible for any delay or failure to comply with our obligations under these conditions if the delay or failure arises from any cause which is beyond our reasonable control. This condition does not affect your statutory rights
\n
\nGoverning Law and Jurisdiction
\nThese conditions are governed by and construed in accordance with the laws of India, and the application of the United Nations Convention on Contracts for the International Sale of Goods is expressly excluded. You agree, as we do, to submit to the exclusive jurisdiction of the courts at Pune.

    </string>
    <string name="contact_us">
        Cafe Tea Time
\nAddress - Flat #1, Davbindu Apartment, Veerbhadra Nagar, Baner, Pune - 45
\nMob.  - 9762001731 , 8484066285
\nEmail - contactcafett@gmail.com
    </string>
    <string name="cafe_website">www.cafeteatime.in</string>
</resources>