<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    android:paddingLeft="4dp"
    android:paddingRight="4dp"
    tools:context=".AboutUs">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="300dp"
                        android:layout_height="300dp"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:padding="12dp"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        style="@android:style/TextAppearance.DeviceDefault.Small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:onClick="onWebLinkClick"
                        android:padding="5dp"
                        android:text="@string/cafe_website"
                        android:textColor="@color/colorPrimaryDark" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        style="@android:style/TextAppearance.DeviceDefault.Large"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:text="About Us"
                        android:textColor="@android:color/black" />

                    <TextView
                        style="@android:style/TextAppearance.DeviceDefault.Small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_us"
                        android:textColor="@android:color/black" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        style="@android:style/TextAppearance.DeviceDefault.Large"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:text="Contact Us"
                        android:textColor="@android:color/black" />

                    <TextView
                        style="@android:style/TextAppearance.DeviceDefault.Small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoLink="all"
                        android:text="@string/contact_us"
                        android:textColor="@android:color/black"
                        android:textColorLink="@color/colorPrimaryDark" />

                </LinearLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>