<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_root"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:tint="#3f000000"
        android:src="@drawable/flash_screen2" />

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/go_to_signUp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="30dp"
        android:weightSum="1">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/TextLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/colorPrimaryDark">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:imeActionId="@+id/goToPassword"
                android:imeActionLabel="Next"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:shadowColor="@color/colorPrimaryDark"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHighlight="@color/colorPrimaryDark"
                android:textColorLink="@color/colorPrimaryDark" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/TextLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimaryDark">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/email_sign_in_button"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:shadowColor="@color/colorPrimaryDark"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHighlight="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                android:textColorLink="@color/colorPrimaryDark" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="Login"
            android:textColor="@android:color/white"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_sign_in_button"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="Forgot password"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/resend_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="Get confimation email"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="20dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:id="@+id/textView4" />
    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@mipmap/ic_launcher"
        android:scaleType="fitCenter"
        android:elevation="5dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"/>

    <!--<android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/cafe_tea_time_logo"
        android:scaleType="fitCenter"
        app:fabSize="normal"
        android:layout_marginTop="20dp"
        android:scaleY="1.5"
        android:scaleX="1.5"
        app:backgroundTint="#fff"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"/>
-->
    <TextView
        android:id="@+id/go_to_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:text="Sign up"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white" />


</RelativeLayout>
